# pyocker-enter

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/agents/: hello-world-agent.md  work-completion-summary.md
.claude/agents/crypto/: crypto-coin-analyzer-haiku.md  crypto-coin-analyzer-opus.md  crypto-investment-plays-haiku.md  crypto-investment-plays-opus.md  crypto-investment-plays-sonnet.md  crypto-market-agent-haiku.md  crypto-market-agent-opus.md  crypto-market-agent-sonnet.md  crypto-movers-haiku.md  macro-crypto-correlation-scanner-haiku.md  macro-crypto-correlation-scanner-opus.md  macro-crypto-correlation-scanner-sonnet.md
.claude/commands/: prime.md  prime_tts.md
.claude/hooks/: permission_request.py  post_tool_use_failure.py  session_end.py  session_start.py  setup.py  subagent_start.py  subagent_stop.py
.claude/hooks/utils/llm/: ollama.py  task_summarizer.py
.claude/hooks/utils/tts/: tts_queue.py
.claude/hooks/validators/: ruff_validator.py  ty_validator.py  validate_file_contains.py  validate_new_file.py
.claude/status_lines/: status_line_v5.py  status_line_v6.py  status_line_v7.py  status_line_v8.py  status_line_v9.py
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  modules.md
specs/: pyocker-enter-implementation.md  pyocker-enter-mvp-gap-review.md
src/pyocker_enter/: cli.py  docker_utils.py  errors.py  fuzzy.py  logging_config.py
src/pyocker_enter/tui/: app.py  screens.py  styles.tcss
tests/: conftest.py  test_cli.py  test_docker_utils.py  test_foo.py  test_fuzzy.py  test_logging_config.py  test_resolver.py  test_tty_guard.py  test_tui.py
tests/integration/: Dockerfile.zsh  conftest.py  docker-compose.yml  test_integration_docker.py
